Changed how strings in RR were being converted to base64 and when SOA dnssec queries are made DNSKEYS are added to additionals