@@ -11,9 +11,7 @@ import lombok.Getter;
 import lombok.ToString;
 import org.apache.logging.log4j.Logger;
 
-import javax.xml.bind.DatatypeConverter;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
+import java.util.Base64;
 import java.util.Set;
 
 /*
@@ -331,7 +329,7 @@ class DNSKEYRR extends RR {
         a = Utils.combine(a, Utils.getTwoBytes(flags, 2));
         a = Utils.combine(a, Utils.getByte(protocol, 1));
         a = Utils.combine(a, Utils.getByte(algorithm, 1));
-        a = Utils.combine(a, DatatypeConverter.parseBase64Binary(publicKey));
+        a = Utils.combine(a, Base64.getEncoder().encode(publicKey.getBytes()));
         //Assertion.aver(false, "This needs to be checked and fixed.");
         return a;
     }
@@ -449,7 +447,7 @@ class RRSIG extends RR {
         a = Utils.combine(a, Utils.getTwoBytes(signatureInception, 2));
         a = Utils.combine(a, Utils.getTwoBytes(keyTag, 2));
         a = Utils.combine(a, Utils.convertString(signersName));
-        a = Utils.combine(a, DatatypeConverter.parseBase64Binary(signature));
+        a = Utils.combine(a, Base64.getEncoder().encode(signature.getBytes()));
 
         return a;
     }
